fixing styling on mobile safari on button

--- a/css/index.css
+++ b/css/index.css
@@ -600,7 +600,8 @@ input[type=submit] {
       width: 19%; } }
   @media screen and (max-width: 500px) {
     input[type=submit] {
-      padding: 1.5%; } }
+      padding: 1.5%;
+      width: 26%; } }
 
 .locationBtn {
   width: 15%; }
